@@ -9,7 +9,6 @@ from Products.LinguaPlone import LinguaPloneMessageFactory as _
 
 
 class IMultiLanguageSelectionSchema(Interface):
-#    use_combined_language_codes = ILanguageSelectionSchema.use_combined_language_codes
 
     default_language = Choice(
         title=_(u"heading_site_language",
@@ -18,7 +17,7 @@ class IMultiLanguageSelectionSchema(Interface):
                       default=u"The default language used for the content "
                               u"and the UI of this site."),
         required=True,
-        vocabulary="plone.app.vocabularies.AvailableContentLanguages")
+        vocabulary="LinguaPlone.vocabularies.AllContentLanguageVocabulary")
 
     available_languages = Tuple(
         title=_(u"heading_available_languages",
@@ -29,8 +28,7 @@ class IMultiLanguageSelectionSchema(Interface):
         required=True,
         missing_value=set(),
         value_type=Choice(
-            vocabulary="plone.app.vocabularies.AvailableContentLanguages"))
-
+            vocabulary="LinguaPlone.vocabularies.AllContentLanguageVocabulary"))
 
 
 class MultiLanguageControlPanelAdapter(LanguageControlPanelAdapter):
@@ -40,19 +38,14 @@ class MultiLanguageControlPanelAdapter(LanguageControlPanelAdapter):
         super(MultiLanguageControlPanelAdapter, self).__init__(context)
 
     def get_available_languages(self):
-        return self.context.getSupportedLanguages()
+        return [unicode(l) for l in self.context.getSupportedLanguages()]
 
     def set_available_languages(self, value):
-        self.context.removeSupportedLanguages(
-                    self.context.getSupportedLanguages())
-
-        for lang in value:
-            self.context.addSupportedLanguage(lang)
+        languages = [str(l) for l in value]
+        self.context.supported_langs = languages
 
     available_languages = property(get_available_languages,
                                    set_available_languages)
-
-
 
 
 class LanguageControlPanel(BasePanel):
@@ -60,9 +53,3 @@ class LanguageControlPanel(BasePanel):
     """
 
     form_fields = FormFields(IMultiLanguageSelectionSchema)
-
-    # XXX: We can not use LanguageDropdownChoiceWidget since (as of Plone 3.0.6)
-    # pulls its data from IUserPreferredLanguages, which does not use the
-    # plone.i18n vocabs to get the proper language names.
-    # form_fields['default_language'].custom_widget = LanguageDropdownChoiceWidget
-
